objects/afdsf__AfrousSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>afdsf__AdminEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Allow administration of the dashboard, e.g. publishing dashboard / widgets to orgs.</description>
        <label>Allow Administration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>afdsf__CollapseDrawer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Collapse right side drawer.</description>
        <label>Collapse Drawer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>afdsf__CollapseNavigator__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Collapse navigator in left side of the display.</description>
        <label>Collapse Navigator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>afdsf__DefaultDashboardId__c</fullName>
        <label>Default Dashboard ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>afdsf__HideDataSourceDirectory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide data source directory in the drawer.</description>
        <label>Hide DataSource Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>afdsf__HideDock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Dock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>afdsf__HideDrawer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Drawer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>afdsf__HideEnvironmentTree__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide environment section in drawer.</description>
        <label>Hide Environment Variables</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>afdsf__HideMenubar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide application menubar</description>
        <label>Hide Menubar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>afdsf__HideNavigator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide the dashboard navigatior in the left side of display.</description>
        <label>Hide Navigator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>afdsf__HideWidgetDirectory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide widget directory in the drawer.</description>
        <label>Hide Widget Directory</label>
        <type>Checkbox</type>
    </fields>
    <label>Mashmatrix Settings</label>
</CustomObject>